@@ -97,6 +97,7 @@ following names for their contribution to the product.
 * FunPika
 * Harry Burt
 * Ireas
+* Jarry1250
 * Jaska Zedlik
 * Jeremy Baron
 * Jidanni
